agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/c_api/cross_platform_c_api_wrapper.h

typedef unsigned int uid_t;
typedef void* view_t;
enum ERROR_CODE {
    ERROR_OK = 0,
    ERROR_INVALID_API_TYPE = -100,
    ERROR_INVALID_PARAM = -101,
    ERROR_PARSE_PARAMETER = -102,
    ERROR_NO_CURRENT_PARAMETER = -103,
    ERROR_NOT_SUPPORT_API = -4,
    ERROR_NOT_INITIALIZE_OBSERVER = -104,
    ERROR_NO_DEVICE = -105,
    ERROR_ENGINE_EXIST = -106,
    ERROR_NO_ENGINE = -107,
    ERROR_INVALID_DEVICE_TYPE = -108,
};
enum AUDIO_RECORDING_QUALITY_TYPE {
    AUDIO_RECORDING_QUALITY_LOW = 0,
    AUDIO_RECORDING_QUALITY_MEDIUM = 1,
    AUDIO_RECORDING_QUALITY_HIGH = 2,
};
enum RENDER_MODE_TYPE {
    RENDER_MODE_HIDDEN = 1,
    RENDER_MODE_FIT = 2,
    RENDER_MODE_ADAPTIVE = 3,
    RENDER_MODE_FILL = 4,
};
enum VIDEO_MIRROR_MODE_TYPE {
    VIDEO_MIRROR_MODE_AUTO = 0, 
    VIDEO_MIRROR_MODE_ENABLED = 1, 
    VIDEO_MIRROR_MODE_DISABLED = 2, 
};
enum REMOTE_VIDEO_STREAM_TYPE {
    REMOTE_VIDEO_STREAM_HIGH = 0,
    REMOTE_VIDEO_STREAM_LOW = 1,
};
enum AUDIO_SAMPLE_RATE_TYPE {
    AUDIO_SAMPLE_RATE_32000 = 32000,
    AUDIO_SAMPLE_RATE_44100 = 44100,
    AUDIO_SAMPLE_RATE_48000 = 48000,
};
enum VIDEO_CODEC_PROFILE_TYPE { 
    VIDEO_CODEC_PROFILE_BASELINE = 66,
    VIDEO_CODEC_PROFILE_MAIN = 77,
    VIDEO_CODEC_PROFILE_HIGH = 100,
};
enum AUDIO_CODEC_PROFILE_TYPE {
    AUDIO_CODEC_PROFILE_LC_AAC = 0,
    AUDIO_CODEC_PROFILE_HE_AAC = 1,
};
enum STREAM_FALLBACK_OPTIONS {
    STREAM_FALLBACK_OPTION_DISABLED = 0,
    STREAM_FALLBACK_OPTION_VIDEO_STREAM_LOW = 1,
    STREAM_FALLBACK_OPTION_AUDIO_ONLY = 2,
};
struct LastmileProbeConfig {
    BOOL probeUplink;
    BOOL probeDownlink;
    unsigned int expectedUplinkBitrate;
    unsigned int expectedDownlinkBitrate;
};
struct VideoDimensions {
    int width;
    int height;
};
typedef struct TranscodingUser {
    uid_t uid;
    int x;
    int y;
    int width;
    int height;
    int zOrder;
    double alpha;
    int audioChannel;
} TranscodingUser;
typedef struct RtcImage {
    const char* url;
    int x;
    int y;
    int width;
    int height;
} RtcImage;
typedef struct LiveStreamAdvancedFeature {
    const char* LBHQ;
    const char* VEO;
    const char* featureName;
    BOOL opened;
} LiveStreamAdvancedFeature;
typedef struct LiveTranscoding {
    int width;
    int height;
    int videoBitrate;
    int videoFramerate;
    BOOL lowLatency;
    int videoGop;
    enum VIDEO_CODEC_PROFILE_TYPE videoCodecProfile;
    unsigned int backgroundColor;
    unsigned int userCount;
    struct TranscodingUser* transcodingUsers;
    const char* transcodingExtraInfo;
    const char* metadata;
    struct RtcImage* watermark;
    struct RtcImage* backgroundImage;
    enum AUDIO_SAMPLE_RATE_TYPE audioSampleRate;
    int audioBitrate;
    int audioChannels;
    enum AUDIO_CODEC_PROFILE_TYPE audioCodecProfile;
    struct LiveStreamAdvancedFeature* advancedFeatures;
    unsigned int advancedFeatureCount;
} LiveTranscoding;
struct InjectStreamConfig {
    int width;
    int height;
    int videoGop;
    int videoFramerate;
    int videoBitrate;
    enum AUDIO_SAMPLE_RATE_TYPE audioSampleRate;
    int audioBitrate;
    int audioChannels;
};
enum VideoContentHint {
    CONTENT_HINT_NONE = 0,
    CONTENT_HINT_MOTION = 1,
    CONTENT_HINT_DETAILS = 2
};
struct Rectangle {
    int x;
    int y;
    int width;
    int height;
};
typedef struct WatermarkOptions {
    BOOL visibleInPreview;
    struct Rectangle positionInLandscapeMode;
    struct Rectangle positionInPortraitMode;
} WatermarkOptions;
struct ScreenCaptureParameters {
    struct VideoDimensions dimensions;
    int frameRate;
    int bitrate;
    BOOL captureMouseCursor;
    BOOL windowFocus;
    view_t* excludeWindowList;
    int excludeWindowCount;
};
enum LIGHTENING_CONTRAST_LEVEL {
    LIGHTENING_CONTRAST_LOW = 0,
    LIGHTENING_CONTRAST_NORMAL,
    LIGHTENING_CONTRAST_HIGH
};
struct BeautyOptions {
    enum LIGHTENING_CONTRAST_LEVEL lighteningContrastLevel;
    float lighteningLevel;
    float smoothnessLevel;
    float rednessLevel;
};
typedef void* IRtcEngineBridge_ptr;
extern "C" DllExport enum ERROR_CODE
setRemoteDefaultVideoStreamType(IRtcEngineBridge_ptr apiBridge, enum REMOTE_VIDEO_STREAM_TYPE streamType);
extern "C" DllExport enum ERROR_CODE
enableAudioVolumeIndication(IRtcEngineBridge_ptr apiBridge, int interval, int smooth, BOOL report_vad);
extern "C" DllExport enum ERROR_CODE
startAudioRecording(IRtcEngineBridge_ptr apiBridge, const char* filePath,
    enum AUDIO_RECORDING_QUALITY_TYPE quality);
extern "C" DllExport enum ERROR_CODE
startAudioRecording2(IRtcEngineBridge_ptr apiBridge, const char* filePath,
    int sampleRate,
    enum AUDIO_RECORDING_QUALITY_TYPE quality);
extern "C" DllExport enum ERROR_CODE
stopAudioRecording(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setRemoteVoicePosition(IRtcEngineBridge_ptr apiBridge, uid_t uid, double pan, double gain);
extern "C" DllExport enum ERROR_CODE
setLogFile(IRtcEngineBridge_ptr apiBridge, const char* file);
extern "C" DllExport enum ERROR_CODE
setLogFilter(IRtcEngineBridge_ptr apiBridge, unsigned int filter);
extern "C" DllExport enum ERROR_CODE
setLogFileSize(IRtcEngineBridge_ptr apiBridge, unsigned int fileSizeInKBytes);
extern "C" DllExport enum ERROR_CODE
setLocalRenderMode(IRtcEngineBridge_ptr apiBridge, enum RENDER_MODE_TYPE renderMode);
extern "C" DllExport enum ERROR_CODE
setLocalRenderMode2(IRtcEngineBridge_ptr apiBridge, enum RENDER_MODE_TYPE renderMode,
    enum VIDEO_MIRROR_MODE_TYPE mirrorMode);
extern "C" DllExport enum ERROR_CODE
setRemoteRenderMode(IRtcEngineBridge_ptr apiBridge, uid_t userId, enum RENDER_MODE_TYPE renderMode);
extern "C" DllExport enum ERROR_CODE
setRemoteRenderMode2(IRtcEngineBridge_ptr apiBridge, uid_t userId,
    enum RENDER_MODE_TYPE renderMode,
    enum VIDEO_MIRROR_MODE_TYPE mirrorMode);
extern "C" DllExport enum ERROR_CODE
setLocalVideoMirrorMode(IRtcEngineBridge_ptr apiBridge, enum VIDEO_MIRROR_MODE_TYPE mirrorMode);
extern "C" DllExport enum ERROR_CODE
enableDualStreamMode(IRtcEngineBridge_ptr apiBridge, BOOL enabled);
extern "C" DllExport enum ERROR_CODE
adjustRecordingSignalVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
adjustPlaybackSignalVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
enableWebSdkInteroperability(IRtcEngineBridge_ptr apiBridge, BOOL enabled);
extern "C" DllExport enum ERROR_CODE
setVideoQualityParameters(IRtcEngineBridge_ptr apiBridge, BOOL preferFrameRateOverImageQuality);
extern "C" DllExport enum ERROR_CODE
setLocalPublishFallbackOption(IRtcEngineBridge_ptr apiBridge, enum STREAM_FALLBACK_OPTIONS option);
extern "C" DllExport enum ERROR_CODE
setRemoteSubscribeFallbackOption(IRtcEngineBridge_ptr apiBridge, enum STREAM_FALLBACK_OPTIONS option);
extern "C" DllExport enum ERROR_CODE
enableLoopbackRecording(IRtcEngineBridge_ptr apiBridge, BOOL enabled, const char* deviceName);
extern "C" DllExport enum ERROR_CODE
startScreenCaptureByScreenRect(IRtcEngineBridge_ptr apiBridge, const struct Rectangle* screenRect,
    const struct Rectangle* regionRect,
    const struct ScreenCaptureParameters* captureParams);
extern "C" DllExport enum ERROR_CODE
startScreenCaptureByWindowId(IRtcEngineBridge_ptr apiBridge, view_t windowId,
    const struct Rectangle* regionRect,
    const struct ScreenCaptureParameters* captureParams);
extern "C" DllExport enum ERROR_CODE
setScreenCaptureContentHint(IRtcEngineBridge_ptr apiBridge, enum VideoContentHint contentHint);
extern "C" DllExport enum ERROR_CODE
updateScreenCaptureParameters(IRtcEngineBridge_ptr apiBridge, struct ScreenCaptureParameters* captureParams);
extern "C" DllExport enum ERROR_CODE
updateScreenCaptureRegion(IRtcEngineBridge_ptr apiBridge, struct Rectangle* regionRect);
extern "C" DllExport enum ERROR_CODE
stopScreenCapture(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport const char*
getCallId(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
rate(IRtcEngineBridge_ptr apiBridge, const char* callId, int rating, const char* description);
extern "C" DllExport enum ERROR_CODE
complain(IRtcEngineBridge_ptr apiBridge, const char* callId, const char* description);
extern "C" DllExport const char*
getVersion(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
enableLastmileTest(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
disableLastmileTest(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
startLastmileProbeTest(IRtcEngineBridge_ptr apiBridge, const struct LastmileProbeConfig config);
extern "C" DllExport enum ERROR_CODE
stopLastmileProbeTest(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport const char*
getErrorDescription(IRtcEngineBridge_ptr apiBridge, int code);
extern "C" DllExport enum ERROR_CODE
setEncryptionSecret(IRtcEngineBridge_ptr apiBridge, const char* secret);
extern "C" DllExport enum ERROR_CODE
setEncryptionMode(IRtcEngineBridge_ptr apiBridge, const char* encryptionMode);
extern "C" DllExport enum ERROR_CODE
createDataStream(IRtcEngineBridge_ptr apiBridge, int* streamId, BOOL reliable, BOOL ordered);
extern "C" DllExport enum ERROR_CODE
sendStreamMessage(IRtcEngineBridge_ptr apiBridge, int streamId, const char* data, long long length);
extern "C" DllExport enum ERROR_CODE
addPublishStreamUrl(IRtcEngineBridge_ptr apiBridge, const char* url, BOOL transcodingEnabled);
extern "C" DllExport enum ERROR_CODE
removePublishStreamUrl(IRtcEngineBridge_ptr apiBridge, const char* url);
extern "C" DllExport enum ERROR_CODE
setLiveTranscoding(IRtcEngineBridge_ptr apiBridge, const struct LiveTranscoding* transcoding);
extern "C" DllExport enum ERROR_CODE
addVideoWatermark(IRtcEngineBridge_ptr apiBridge, const struct RtcImage watermark);
extern "C" DllExport enum ERROR_CODE
addVideoWatermark2(IRtcEngineBridge_ptr apiBridge, const char* watermarkUrl, const struct WatermarkOptions options);
extern "C" DllExport enum ERROR_CODE
clearVideoWatermarks(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setBeautyEffectOptions(IRtcEngineBridge_ptr apiBridge, BOOL enabled, struct BeautyOptions options);
extern "C" DllExport enum ERROR_CODE
addInjectStreamUrl(IRtcEngineBridge_ptr apiBridge, const char* url, struct InjectStreamConfig config);