OneToOneVideo/OneToOneVideo/agorartc/AgoraRtcApiNative.cs


        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setRemoteDefaultVideoStreamType(IRtcEngineBridge_ptr apiBridge,
            REMOTE_VIDEO_STREAM_TYPE streamType);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableAudioVolumeIndication(IRtcEngineBridge_ptr apiBridge, int interval,
            int smooth, int report_vad);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startAudioRecording(IRtcEngineBridge_ptr apiBridge, string filePath,
            AUDIO_RECORDING_QUALITY_TYPE quality);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startAudioRecording2(IRtcEngineBridge_ptr apiBridge, string filePath,
            int sampleRate, AUDIO_RECORDING_QUALITY_TYPE quality);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopAudioRecording(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setRemoteVoicePosition(IRtcEngineBridge_ptr apiBridge, uid_t uid, double pan,
            double gain);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLogFile(IRtcEngineBridge_ptr apiBridge, string file);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLogFilter(IRtcEngineBridge_ptr apiBridge, uint filter);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLogFileSize(IRtcEngineBridge_ptr apiBridge, uint fileSizeInKBytes);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalRenderMode(IRtcEngineBridge_ptr apiBridge,
            RENDER_MODE_TYPE renderMode);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalRenderMode2(IRtcEngineBridge_ptr apiBridge,
            RENDER_MODE_TYPE renderMode, VIDEO_MIRROR_MODE_TYPE mirrorMode);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setRemoteRenderMode(IRtcEngineBridge_ptr apiBridge, uid_t userId,
            RENDER_MODE_TYPE renderMode);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setRemoteRenderMode2(IRtcEngineBridge_ptr apiBridge, uid_t userId,
            RENDER_MODE_TYPE renderMode, VIDEO_MIRROR_MODE_TYPE mirrorMode);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalVideoMirrorMode(IRtcEngineBridge_ptr apiBridge,
            VIDEO_MIRROR_MODE_TYPE mirrorMode);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableDualStreamMode(IRtcEngineBridge_ptr apiBridge, int enabled);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE adjustRecordingSignalVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE adjustPlaybackSignalVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableWebSdkInteroperability(IRtcEngineBridge_ptr apiBridge, int enabled);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setVideoQualityParameters(IRtcEngineBridge_ptr apiBridge,
            int preferFrameRateOverImageQuality);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalPublishFallbackOption(IRtcEngineBridge_ptr apiBridge,
            STREAM_FALLBACK_OPTIONS option);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setRemoteSubscribeFallbackOption(IRtcEngineBridge_ptr apiBridge,
            STREAM_FALLBACK_OPTIONS option);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableLoopbackRecording(IRtcEngineBridge_ptr apiBridge, int enabled,
            string deviceName);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startScreenCaptureByScreenRect(IRtcEngineBridge_ptr apiBridge,
            ref Rectangle screenRect, ref Rectangle regionRect, ref ScreenCaptureParameters captureParams);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE
            startScreenCaptureByWindowId(IRtcEngineBridge_ptr apiBridge, view_t windowId, ref Rectangle regionRect,
                ref ScreenCaptureParameters captureParams);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setScreenCaptureContentHint(IRtcEngineBridge_ptr apiBridge,
            VideoContentHint contentHint);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE updateScreenCaptureParameters(IRtcEngineBridge_ptr apiBridge,
            ref ScreenCaptureParameters captureParams);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE updateScreenCaptureRegion(IRtcEngineBridge_ptr apiBridge,
            ref Rectangle regionRect);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopScreenCapture(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern string getCallId(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE rate(IRtcEngineBridge_ptr apiBridge, string callId, int rating,
            string description);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE complain(IRtcEngineBridge_ptr apiBridge, string callId, string description);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern string getVersion(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableLastmileTest(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE disableLastmileTest(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startLastmileProbeTest(IRtcEngineBridge_ptr apiBridge,
            LastmileProbeConfig config);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopLastmileProbeTest(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern string getErrorDescription(IRtcEngineBridge_ptr apiBridge, int code);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setEncryptionSecret(IRtcEngineBridge_ptr apiBridge, string secret);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setEncryptionMode(IRtcEngineBridge_ptr apiBridge, string encryptionMode);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE createDataStream(IRtcEngineBridge_ptr apiBridge, IntPtr streamId,
            int reliable, int ordered);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE sendStreamMessage(IRtcEngineBridge_ptr apiBridge, int streamId, string data,
            long length);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE addPublishStreamUrl(IRtcEngineBridge_ptr apiBridge, string url,
            int transcodingEnabled);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE removePublishStreamUrl(IRtcEngineBridge_ptr apiBridge, string url);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLiveTranscoding(IRtcEngineBridge_ptr apiBridge,
            ref LiveTranscoding transcoding);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE addVideoWatermark(IRtcEngineBridge_ptr apiBridge, RtcImage watermark);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE addVideoWatermark2(IRtcEngineBridge_ptr apiBridge, string watermarkUrl,
            WatermarkOptions options);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE clearVideoWatermarks(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setBeautyEffectOptions(IRtcEngineBridge_ptr apiBridge, int enabled,
            BeautyOptions options);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE addInjectStreamUrl(IRtcEngineBridge_ptr apiBridge, string url,
            InjectStreamConfig config);
